--- a/index.html
+++ b/index.html
@@ -18,39 +18,39 @@
 
   <div  class="sub">
     <div class="container" id="main">
-      <input type="button" value="A" onclick= "foo('a')"  id="btn">
-      <input type="button" value="B" onclick= "foo('b')"  id="btn">
-      <input type="button" value="C" onclick= "foo('c')"  id="btn">
-      <input type="button" value="D" onclick= "foo('d')"  id="btn">
-      <input type="button" value="E" onclick= "foo('e')"  id="btn">
-      <input type="button" value="F" onclick= "foo('f')"  id="btn">
-      <input type="button" value="G" onclick= "foo('g')"  id="btn">
-      <input type="button" value="H" onclick= "foo('h')"  id="btn">
-      <input type="button" value="I" onclick= "foo('i')"  id="btn">
-      <input type="button" value="J" onclick= "foo('j')"  id="btn"> 
+      <input type="button" value="A" onclick= "foo('a')"  class="btn">
+      <input type="button" value="B" onclick= "foo('b')"  class="btn">
+      <input type="button" value="C" onclick= "foo('c')"  class="btn">
+      <input type="button" value="D" onclick= "foo('d')"  class="btn">
+      <input type="button" value="E" onclick= "foo('e')"  class="btn">
+      <input type="button" value="F" onclick= "foo('f')"  class="btn">
+      <input type="button" value="G" onclick= "foo('g')"  class="btn">
+      <input type="button" value="H" onclick= "foo('h')"  class="btn">
+      <input type="button" value="I" onclick= "foo('i')"  class="btn">
+      <input type="button" value="J" onclick= "foo('j')"  class="btn"> 
     </div>
 
     <div class="container">
-      <input type="button" value="K" onclick= "foo('k')"  id="btn">
-      <input type="button" value="L" onclick= "foo('l')"  id="btn">
-      <input type="button" value="M" onclick= "foo('m')"  id="btn">
-      <input type="button" value="N" onclick= "foo('n')"  id="btn">
-      <input type="button" value="O" onclick= "foo('o')"  id="btn">
-      <input type="button" value="P" onclick= "foo('p')"  id="btn">
-      <input type="button" value="Q" onclick= "foo('q')"  id="btn">
-      <input type="button" value="R" onclick= "foo('r')"  id="btn">
-      <input type="button" value="S" onclick= "foo('s')"  id="btn">
-      <input type="button" value="T" onclick= "foo('t')"  id="btn">
+      <input type="button" value="K" onclick= "foo('k')"  class="btn">
+      <input type="button" value="L" onclick= "foo('l')"  class="btn">
+      <input type="button" value="M" onclick= "foo('m')"  class="btn">
+      <input type="button" value="N" onclick= "foo('n')"  class="btn">
+      <input type="button" value="O" onclick= "foo('o')"  class="btn">
+      <input type="button" value="P" onclick= "foo('p')"  class="btn">
+      <input type="button" value="Q" onclick= "foo('q')"  class="btn">
+      <input type="button" value="R" onclick= "foo('r')"  class="btn">
+      <input type="button" value="S" onclick= "foo('s')"  class="btn">
+      <input type="button" value="T" onclick= "foo('t')"  class="btn">
       
       </div>
 
       <div class="container" >
-      <input type="button" value="U" onclick= "foo('u')"  id="btn">
-      <input type="button" value="V" onclick= "foo('v')"  id="btn">
-      <input type="button" value="W" onclick= "foo('w')"  id="btn">
-      <input type="button" value="X" onclick= "foo('x')"  id="btn">
-      <input type="button" value="Y" onclick= "foo('y')"  id="btn">
-      <input type="button" value="Z" onclick= "foo('z')"  id="btn">
+      <input type="button" value="U" onclick= "foo('u')"  class="btn">
+      <input type="button" value="V" onclick= "foo('v')"  class="btn">
+      <input type="button" value="W" onclick= "foo('w')"  class="btn">
+      <input type="button" value="X" onclick= "foo('x')"  class="btn">
+      <input type="button" value="Y" onclick= "foo('y')"  class="btn">
+      <input type="button" value="Z" onclick= "foo('z')"  class="btn">
     </div>
 
       <footer>
